further refactoring
fixed many bugs

implemented features